--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  color: rgba(255, 255, 255, 0.85);
+  font-size: 14px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  line-height: 1.57143;
+  background: rgb(48, 48, 48);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +14,34 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html,
+body,
+#root,
+.App {
+  height: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.layout-header {
+  text-align: center;
+  padding: 12px;
+  font-size: 48px;
+  height: 100px;
+  font-weight: bolder;
+  background-color: rgb(20, 20, 20);
+}
+
+.layout-body {
+  padding: 20px;
+  height: calc(100vh - 100px);
+  overflow-x: hidden;
+  display: flex;
+  gap: 16px;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
