--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,7 @@ body {
   margin: 0;
   color: rgba(255, 255, 255, 0.85);
   font-size: 14px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   line-height: 1.57143;
   background: rgb(48, 48, 48);
@@ -12,14 +11,13 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 html,
 body,
 #root,
-.App {
+.layout {
   height: 100%;
 }
 
@@ -40,8 +38,17 @@ body,
   padding: 20px;
   height: calc(100vh - 100px);
   overflow-x: hidden;
+}
+
+.layout-container {
+  max-width: 960px;
+  margin: 0 auto;
   display: flex;
   gap: 16px;
   flex-wrap: wrap;
   flex-direction: column;
+}
+
+.ant-form-item .ant-form-item-explain-error {
+  font-size: 12px !important;
 }
