--- a/src/pages/exec/components/MovementTimer/index.less
+++ b/src/pages/exec/components/MovementTimer/index.less
@@ -1,5 +1,4 @@
 .movement-timer {
-  width: 806px;
   margin: 0 auto;
   border: 3px solid #999;
   text-align: center;
@@ -7,10 +6,13 @@
   h3 {
     font-size: 36px;
     font-weight: bolder;
-    line-height: 86px;
+    height: 72px;
     border-bottom: 3px solid #999;
     margin: 0;
     padding: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .movement-count {
     padding: 10px;
@@ -43,7 +45,7 @@
     .ant-btn-lg {
       height: auto;
       font-size: 24px;
-      padding: 12px 30px;
+      padding: 10px 30px;
 
       display: inline-flex;
       justify-content: center;
